fix: fixes running Jshell script with //DEPS
Fixes #992